# RoboCFO

./: .env.example  .gitignore  README.md  SPEC.md  contracts.py  docker-compose.yml  progress.md
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/data/: loader.py
backend/app/data/fixtures/: market_assumptions.json  sample_state.json
backend/app/data/tax_tables/: 2026.json
backend/app/explanation/: renderer.py
backend/app/explanation/templates/: recommendation.j2
backend/app/optimizer/: engine.py  strategies.py
backend/app/routers/: optimize.py  simulate.py
backend/app/simulation/: monte_carlo.py
backend/app/tax/: annual.py  fixed_income.py  irpf.py  irpfm.py  variable_income.py
backend/tests/: conftest.py  test_smoke.py
backend/tests/api/: test_health.py  test_main.py
backend/tests/data/: test_fixtures.py  test_tax_tables.py
backend/tests/explanation/: test_renderer.py
backend/tests/integration/: test_full_pipeline.py
backend/tests/optimizer/: test_engine.py  test_strategies.py
backend/tests/routers/: test_explain.py  test_simulate_optimize.py
backend/tests/simulation/: test_monte_carlo.py
backend/tests/tax/: test_annual.py  test_fixed_income.py  test_irpf.py  test_irpfm.py  test_variable_income.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx  test-setup.ts
frontend/src/__tests__/: Home.test.tsx  (+5 more)
tasks/: plan.md  todo.md
(+8 files in other folders)
