[project]
name = "robo-cfo"
version = "0.1.0"
description = "Educational personal-finance decision simulator for Brazil"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "jinja2>=3.1",
    "anthropic>=0.28",
    "openai>=1.35",
    "python-dotenv>=1.0",
    "numpy>=2.0",
    "httpx2>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "httpx>=0.27",      # for FastAPI TestClient
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
mypy_path = ".."

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
# Repo root on path so `import contracts` resolves from backend/
pythonpath = [".", ".."]
anyio_mode = "auto"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]
